--- a/learn_flask/python_decorator.ipynb
+++ b/learn_flask/python_decorator.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "5fc1c103-9b65-4ea6-ab06-1510982d87a0",
    "metadata": {},
    "outputs": [
@@ -69,14 +69,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# inner_func 함수는 outer_func 함수 안에서 선언되었기 때문에 안에서만 호출 가능\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m inner_func()\n",
+      "Cell \u001b[1;32mIn[25], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# inner_func 함수는 outer_func 함수 안에서 선언되었기 때문에 안에서만 호출 가능\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m inner_func()\n",
       "\u001b[1;31mNameError\u001b[0m: name 'inner_func' is not defined"
      ]
     }
    ],
    "source": [
     "# inner_func 함수는 outer_func 함수 안에서 선언되었기 때문에 안에서만 호출 가능\n",
-    "inner_func()"
+    "inner_func() # Error!"
    ]
   },
   {
@@ -483,7 +483,7 @@
    "metadata": {},
    "source": [
     "#### 연습\n",
-    "#### 스트링으로 된 문자열이 주어지면, 정해진 목차 기호로 나열해준느 First-class 함수를 만들어보세요."
+    "#### 스트링으로 된 문자열이 주어지면, 정해진 목차 기호로 나열해주는 First-class 함수를 만들어보세요."
    ]
   },
   {
@@ -517,6 +517,259 @@
     "data_list_x = list_creator('X')\n",
     "data_list_x('안녕')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ead4bde-1c98-438f-a578-6c42a4ba7833",
+   "metadata": {},
+   "source": [
+    "### 2.3. Closure function\n",
+    "- 함수와 해당 함수가 가지고 있는 데이터를 함께 복사, 저장해서 별도 함수로 활용하는 기법으로 First-class 기법과 동일\n",
+    "- 외부 함수가 소멸되더라도, 외부 함수 안에 있는 로컬 변수 값과 중첩함수(내부함수)를 사용할 수 있는 기법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b67af8b1-a719-47b4-8d83-a557aed07b46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def outer_func(num):\n",
+    "    # 중첩 함수에서 외부 함수의 변수에 접근 가능\n",
+    "    def inner_func():\n",
+    "        print(num)\n",
+    "        return '안녕'\n",
+    "    return inner_func # 중첩 함수 이름을 리턴한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0b0893b7-6f3e-442f-a541-445edae84c2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'안녕'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "closure_func = outer_func(10) # <-- First-class function\n",
+    "closure_func() # <-- Closure 호출"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b39eb8-9a4f-44c3-9c21-d96eb145f60c",
+   "metadata": {},
+   "source": [
+    "<b> 예제 코드로 이해하는 Closure\n",
+    "- 위의 예제에서 closure_func가 바로 Closure 임\n",
+    "- closure_func = outer_func(10) 에서 outer_func 함수는 호출 종료\n",
+    "- closure_func() 은 결국 inner_func 함수를 호출\n",
+    "- outer_func(10) 호출 종료시 num 값은 없어졌으나, closure_func()에서 inner_func이 호출되면서 이전의 num값(10)을 사용함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "378c6402-4e64-49d4-a1fc-d769e767102e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del outer_func"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cedb9ebd-9a47-42f1-8f74-e8e9c095bb37",
+   "metadata": {},
+   "source": [
+    "<b>outer_func 함수를 삭제해버려도 closure_func(), 즉 inner_func()와 num(10)값은 살아있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "22959c11-06e8-4768-b8d2-7184d6772216",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'안녕'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "closure_func()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b8693c5-fe23-4521-ad0a-fe51b39d6431",
+   "metadata": {},
+   "source": [
+    "#### <b> 언제 closure를 사용할까?\n",
+    "- closure는 객체와 유사\n",
+    "- 일반적으로 제공해야할 기능(method)이 적은 경우, closure를 사용하기도 함\n",
+    "- 제공해야할 기능(method)가 많은 경우등은 class를 사용하여 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d680d253-313d-471c-8ef2-26a6a610a5b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_square(digit):\n",
+    "    return digit * digit\n",
+    "\n",
+    "def calc_power_3(digit):\n",
+    "    return digit * digit * digit\n",
+    "\n",
+    "def calc_quad(digit):\n",
+    "    return digit * digit * digit * digit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c1aa535f-1219-42d0-a3b9-31c1f0c62cc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calc_square(2))\n",
+    "print(calc_power_3(2))\n",
+    "print(calc_quad(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1697629c-3fc6-4ce5-a60a-6ce3d9d4cd59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_power(n):\n",
+    "    def power(digit):\n",
+    "        return digit ** n\n",
+    "    return power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ced75263-aaf7-4a22-88c1-ae5ae63cc653",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "power2 = calc_power(2)\n",
+    "power3 = calc_power(3)\n",
+    "power4 = calc_power(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "273a65f3-a038-4925-8c65-1e985cc74f93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(power2(2))\n",
+    "print(power3(2))\n",
+    "print(power4(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2de04ad4-14ba-43ea-b714-a17e043cfef8",
+   "metadata": {},
+   "source": [
+    "#### <b>연습\n",
+    "<b> 1에서 5까지 1승부터 5승까지 출력하기 (위 calc_power() 함수를 사용해서 list_data 리스트 변수에 1승부터 5승까지 계산 클로져 함수를 넣어서 사용)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "be092f56-8820-41a3-8f96-85af986a1e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_data = list()\n",
+    "for num in range(1, 6):\n",
+    "    list_data.append(calc_power(num)) # n값이 입력된 함수(객체)가 리스트에 들어가게 됨.\n",
+    "\n",
+    "for func in list_data:\n",
+    "    print(func(2)) # n 값이 입력되어 반환된 power함수에 2를 입력하여 값을 계산"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f722a647-87d9-46aa-8b65-1dc509699d00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
