Decorator 문법 학습 1/2

--- a/learn_flask/python_decorator.ipynb
+++ b/learn_flask/python_decorator.ipynb
@@ -764,9 +764,649 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc02aeff-781c-44f7-8a09-c42cc6b19244",
+   "metadata": {},
+   "source": [
+    "#### <b> 2.4. 데코레이터 (Decorator)\n",
+    "- 함수 앞뒤에 기능을 추가해서 손쉽게 함수를 활용할 수 있는 기법\n",
+    "- Closure function을 활용\n",
+    "- https://www.python.org/dev/peps/pep-0318\n",
+    "- 예시\n",
+    "```\n",
+    "    @decorator_func\n",
+    "    def function():\n",
+    "        print(\"What is decorator?\")\n",
+    "```\n",
+    "<b> 위 코드에서 @decorator_func 부분이 데코레이터임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0fdabf48-0ec3-42ab-81b9-0e9e9f3855af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dave login\n"
+     ]
+    }
+   ],
+   "source": [
+    "def logger_login():\n",
+    "    print (\"Dave login\")\n",
+    "\n",
+    "logger_login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1d63d775-f5b6-4d04-bc3f-42a8809eb779",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2026-01-14 23:34:35.064567\n",
+      "Dave login\n",
+      "2026-01-14 23:34:35.064615\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 시간을 앞뒤로 추가하고 싶다.\n",
+    "import datetime\n",
+    "\n",
+    "def logger_login():\n",
+    "    print(datetime.datetime.now())\n",
+    "    print(\"Dave login\")\n",
+    "    print(datetime.datetime.now())\n",
+    "\n",
+    "logger_login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cd432b6b-96f9-4b6a-a354-c7ce9fd64253",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 비슷한 함수도 깔끔하게 넣으려면\n",
+    "def logger_login_david():\n",
+    "    print(\"David login\")\n",
+    "\n",
+    "def logger_login_anthony():\n",
+    "    print(\"Anthony login\")\n",
+    "\n",
+    "def logger_login_tina():\n",
+    "    print(\"Tina login\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6872eb0f-47b3-4bab-a7ff-396eafb30d78",
+   "metadata": {},
+   "source": [
+    "<b> 직접 각 함수에 기능을 앞뒤로 코드로 넣어도 되지 않을까?\n",
+    "- 여러 함수에 동일한 기능을 @데코레이터 하나로 간편하게 추가할 수 있음.\n",
+    "- 예를 들어, 파라미터가 있는 함수에 파라미터의 유효성 검사가 필요할 때\n",
+    "  - 파라미터가 있는 함수가 있을 때마다, 유효성 검사 코드를 넣기가 불편\n",
+    "  - 만약 유효성 검사 코드 수정이 필요하다면 관련 함수를 모두 수정해야 하므로 매우 불편\n",
+    "#### <b>2.5. 데코레이터 작성법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bcdac2ae-2eb3-4d6b-8a3a-c8907fadfbc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데코레이터 작성하기\n",
+    "import datetime\n",
+    "def datetime_decorator(func):                          # <--- datetime_decorator는 데코레이터 이름, func가 이 함수 안에 넣을 함수가 됨\n",
+    "    def wrapper():                                      # <--- 호출할 함수를 감싸는 함수\n",
+    "        print('time ' + str(datetime.datetime.now()))   # <--- 함수 앞에서 실행할 내용\n",
+    "        func()                                          # <--- 함수\n",
+    "        print(datetime.datetime.now())                  # <--- 함수 뒤에서 실행할 내용\n",
+    "    return wrapper                                      # <--- closure 함수로 만든다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6efe4a5f-a5b4-4cd3-8365-8774464ceff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time 2026-01-15 20:44:24.221527\n",
+      "David login\n",
+      "2026-01-15 20:44:24.221585\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데코레이터 적용하기\n",
+    "@datetime_decorator\n",
+    "def logger_login_david():\n",
+    "    print(\"David login\")\n",
+    "\n",
+    "logger_login_david()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ddf0eda3-8cd2-4b8a-b956-9884dfae39c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time 2026-01-15 20:45:01.539265\n",
+      "Anthony login\n",
+      "2026-01-15 20:45:01.539337\n"
+     ]
+    }
+   ],
+   "source": [
+    "@datetime_decorator\n",
+    "def logger_login_anthony():\n",
+    "    print(\"Anthony login\")\n",
+    "\n",
+    "logger_login_anthony()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e8bb4986-38fc-41c6-b183-8a3ae29434bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time 2026-01-15 21:11:04.763046\n",
+      "Tina login\n",
+      "2026-01-15 21:11:04.763104\n"
+     ]
+    }
+   ],
+   "source": [
+    "@datetime_decorator\n",
+    "def logger_login_tina():\n",
+    "    print(\"Tina login\")\n",
+    "\n",
+    "logger_login_tina()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7d97752-062b-4e3a-abc3-9c531f128af6",
+   "metadata": {},
+   "source": [
+    "### <b> Nested function, Closure function과 함께 데코레이터를 풀어서 작성해보자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "49d539f6-1c0e-4970-a93c-672bef618166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# decorator 함수 정의\n",
+    "def outer_func(function):\n",
+    "    def inner_func():\n",
+    "        print('decoration added')\n",
+    "        function()\n",
+    "    return inner_func\n",
+    "\n",
+    "# decorating할 함수\n",
+    "def log_func():\n",
+    "    print('logging')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a9bf98d9-db53-4166-9755-2afeeff45b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logging\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 본래 함수\n",
+    "log_func()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4e4ab82a-ebb1-46d5-ab10-ca46a71b034a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decoration added\n",
+      "logging\n"
+     ]
+    }
+   ],
+   "source": [
+    "# log_func 함수에 inner_func 함수의 기능을 추가한 decorated_func 함수\n",
+    "decorated_func = outer_func(log_func)\n",
+    "decorated_func() # <--- 결과는 데코레이터를 사용할 때와 동일함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2483d9b-0507-40ef-93a1-cd48559b2d5d",
+   "metadata": {},
+   "source": [
+    "#### <b> 이것을 한번에 데코레이터로 작성하면!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f8e1d9bf-9df2-4ee4-a09b-3fd5d541d317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decoration added\n",
+      "logging\n"
+     ]
+    }
+   ],
+   "source": [
+    "@outer_func\n",
+    "def log_func():\n",
+    "    print('logging')\n",
+    "\n",
+    "log_func()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "957b0687-f17b-4e9a-a0da-d2c6fd954a35",
+   "metadata": {},
+   "source": [
+    "#### <b>  파라미터가 있는 함수에 Decorator 적용하기\n",
+    "- 중첩함수에 꾸미고자 하는 함수와 동일하게 파라미터를 가져가면 됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "38e1345d-9783-4fa2-b52c-b04547465b5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데코레이터\n",
+    "def outer_func(function):\n",
+    "    def inner_func(digit1, digit2):\n",
+    "        if digit2 == 0:\n",
+    "            print('cannot be divided with zero')\n",
+    "            return\n",
+    "        function(digit1, digit2) # 중첩함수가 받을 인자를 동일하게 선언해줌\n",
+    "    return inner_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "51fe54fb-9239-4b55-ad6a-fa0c30c395ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실제 함수\n",
+    "def divide(digit1, digit2):\n",
+    "    return digit1 / digit2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ffe86efe-dd42-4417-a401-331443cb6585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데코레이터 사용하기 (유효성 검사)\n",
+    "@outer_func\n",
+    "def divide(digit1, digit2):\n",
+    "    print(digit1 / digit2)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "49466426-d444-408f-9d08-f9f53bb31a4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "divide(4, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ffdef5c9-578d-421c-bd16-c94993f3d5dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cannot be divided with zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "divide(9, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "394942a9-b24c-42a9-8c53-2697e3e75a30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "only integer supprot\n"
+     ]
+    }
+   ],
+   "source": [
+    "def type_checker(function):\n",
+    "    def inner_func(digit1, digit2):\n",
+    "        if (type(digit1) != int) or (type(digit2) != int):\n",
+    "            print('only integer supprot')\n",
+    "            return\n",
+    "        return function(digit1, digit2)\n",
+    "    return inner_func\n",
+    "\n",
+    "@type_checker\n",
+    "def muliplexer(digit1, digit2):\n",
+    "    return digit1 * digit2\n",
+    "\n",
+    "muliplexer(1.1, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88f59a51-437c-405d-b73e-b651e6fa0fb8",
+   "metadata": {},
+   "source": [
+    "#### <b>파라미터와 관계없이 모든 함수에 적용 가능한 Decorator 만들기\n",
+    "- 파라미터는 어떤 형태이든 결국 (*args, **kwargs) 로 표현 가능\n",
+    "- 데코레이터와 내부함수 파라미터를(*args, **kwargs)로 작성하면 어떤 함수이든 데코레이터 적용 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3f9870ec-2a69-43c5-a652-019ac1974b95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데코레이터 작성\n",
+    "def general_decorator(function):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print('function is decorated')\n",
+    "        return function(*args, **kwargs)\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8a83e235-e398-473e-a817-e5491d295854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데코레이터 적용\n",
+    "@general_decorator\n",
+    "def calc_square(digit):\n",
+    "    return digit * digit\n",
+    "\n",
+    "@general_decorator\n",
+    "def calc_plus(digit1, digit2):\n",
+    "    return digit1 + digit2\n",
+    "\n",
+    "@general_decorator\n",
+    "def calc_quad(digit1, digit2, digit3, digit4):\n",
+    "    return digit1 * digit2 * digit3 * digit4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8497befb-3821-4ee7-b502-a241bb16b278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function is decorated\n",
+      "4\n",
+      "function is decorated\n",
+      "5\n",
+      "function is decorated\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 함수 호출하기\n",
+    "print(calc_square(2))\n",
+    "print(calc_plus(2, 3))\n",
+    "print(calc_quad(2, 3, 4, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85e5204e-034d-4975-8c2c-b9c77b149767",
+   "metadata": {},
+   "source": [
+    "### 한 함수에 데코레이터 여러 개 지정하기\n",
+    "* 함수에 여러 개의 데코레이터 지정 가능 (여러 줄로 @데코레이터를 써주면 됨)\n",
+    "* 데코레이터를 나열한 순서대로 실행됨 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a2d221f0-b191-4658-b2a9-76c512b0491f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 여러 데코레이터 작성하기\n",
+    "def decorator1(function):\n",
+    "    def wrapper():\n",
+    "        print('decorator1')\n",
+    "        function()\n",
+    "    return wrapper\n",
+    "\n",
+    "def decorator2(function):\n",
+    "    def wrapper():\n",
+    "        print('decorator2')\n",
+    "        function()\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "24ae6d7e-bdf5-4a2a-aa68-50b3dabeaf41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 여러 데코레이터를 함수에 한번에 적용하기\n",
+    "@decorator1\n",
+    "@decorator2\n",
+    "def hello():\n",
+    "    print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7071cc2b-1a79-412d-8c05-8cfc6fe9fbb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decorator1\n",
+      "decorator2\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bc29497-ddd5-4f31-9aa6-e32f1868b738",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block\" style=\"border: 1px solid #FFB300;background-color:#F9FBE7;\">\n",
+    "<font size=\"3em\" style=\"font-weight:bold;color:#3f8dbf;\">도전 과제</font><br>\n",
+    "다음 그림에 있는 HTML 웹페이지 태그를 붙여주는 데코레이터 만들기<br>\n",
+    "해당 데코레이터를 사용해서 안녕하세요 출력해보기<br>\n",
+    "<img src=\"https://www.fun-coding.org/00_Images/tag.png\" />\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a92802cf-f92a-47f7-9572-00c1be8d695b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_bold(msg):\n",
+    "    def wrapper():\n",
+    "        return f\"<b>{msg()}</b>\"\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "08581f6b-45bc-4c71-825a-05bf26a0e406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@mark_bold\n",
+    "def tag_print():\n",
+    "    return \"내용\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "b01431f7-2ce8-434d-ab6f-bf925a6c8e68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<b>내용</b>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tag_print())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "de527f50-d8d6-4414-be08-2404ed4a8b51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_italic(msg):\n",
+    "    def wrapper():\n",
+    "        return f\"<i>{msg()}</i>\"\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "fc7caeb1-2a0a-4762-bf5d-f7ffd5d4a86e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@mark_italic\n",
+    "def tag_print():\n",
+    "    return \"내용\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "e74a9fc4-8144-413a-abd5-01e73043a08a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<i>내용</i>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tag_print())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f722a647-87d9-46aa-8b65-1dc509699d00",
+   "id": "bc2b41a0-1100-4e8c-a800-7a1231f2f3e1",
    "metadata": {},
    "outputs": [],
    "source": []
